--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -2,8 +2,33 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.TestActivity">
+
+
+  <Button
+      android:id="@+id/btn_live_data"
+      android:layout_width="match_parent"
+      android:layout_height="80dp"
+      android:text="LiveData"
+      app:layout_constraintBottom_toTopOf="@+id/btn_rx_java"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+  />
+
+  <Button
+      android:id="@+id/btn_rx_java"
+      android:layout_width="match_parent"
+      android:layout_height="80dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="30dp"
+      android:text="RxJava"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+  />
+
 
 </android.support.constraint.ConstraintLayout>
