--- a/app/src/main/res/layout/activity_live_data_test.xml
+++ b/app/src/main/res/layout/activity_live_data_test.xml
@@ -2,8 +2,32 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context=".activities.TestActivity">
+
+  <TextView
+      android:id="@+id/user_content"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginStart="30dp"
+      android:layout_marginTop="30dp"
+      android:layout_marginBottom="10dp"
+  />
+
+  <Button
+      android:id="@+id/btn_change_name"
+      android:layout_width="match_parent"
+      android:layout_height="80dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="30dp"
+      android:text="Change Name"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+  />
 
 </android.support.constraint.ConstraintLayout>
